fix scrollbar

--- a/app/assets/css/Panels/home.css
+++ b/app/assets/css/Panels/home.css
@@ -8,7 +8,7 @@
 .overlay {
     position: absolute;
     background: linear-gradient(rgba(27, 27, 27, 0.4),rgb(27, 27, 27)), url("../../images/background/wallpaper.jpg") no-repeat center center scroll;
-    height: 55vh;
+    height: 70vh;
     width: 100%;
 }
 
